[tool.poetry]
name = "ql-code"
version = "0.1.0"
description = "青龙脚本"
authors = ["aiofy"]
readme = "README.md"
packages = [{include = "ql_code"}]

[tool.poetry.dependencies]
python = "~3.8"
loguru = "^0.7.0"
httpx = "^0.24.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
